# Video-semantic-search

./: README.md  pyproject.toml
chroma/: chroma.sqlite3
video_semantic_search/: README.md  demo_class.py  eval.py
